# klein_kinematic

./: CMakeLists.txt  camera_ops.h  cayley.cpp  cayley.h  cayley.py  generate_points.cpp  klein_ops.h  outer_exp.cpp  outer_exp.h  outer_exp.py
